--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "axios": "^1.1.3",
-    "nanoid": "^4.0.0"
+    "axios": "^1.1.3"
   }
 }
